--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+<link rel="stylesheet" href="style.css">
+  <title>website</title>
 </head>
 
 <body>
-  <h1>hello world</h1>
+  <header>
+<h1 id="my-text">FrosT</h1>
+  </header>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://unpkg.com/split-type"></script>
+<script>
+  const myText = new SplitType('#m      y-text')
+  gsap.to('.char'{
+    y:0,
+    stagger:0.05,
+    delay:0.2,
+    duration: .1s
+  })
   
+</script>
+
 </body>
 
 </html>
