new implementation with pure js

--- a/index.html
+++ b/index.html
@@ -5,25 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
   <title>website</title>
 </head>
 
 <body>
-  <header>
-<h1 id="my-text">FrosT</h1>
-  </header>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://unpkg.com/split-type"></script>
-<script>
-  const myText = new SplitType('#m      y-text')
-  gsap.to('.char'{
-    y:0,
-    stagger:0.05,
-    delay:0.2,
-    duration: .1s
-  })
-  
-</script>
+  <h1 id="my-text">Split Text Animation</h1>
 
 </body>
 
